--- a/config.php.example
+++ b/config.php.example
@@ -5,13 +5,26 @@
  * and open the template in the editor.
  */
 
+define('DS',DIRECTORY_SEPARATOR);
+define('ROOT_PATH',__DIR__);
+
 define('DB_PATH', 'sample.sqlite');
 define('DB_USER','sample');
 define('DB_PASS','sample');
 
 define('POSTS_TBL','posts');
+define('EVENTS_TBL','events');
 
 define('DT_FORMAT','Y-m-d H:i:s');
+
+define('EVENTS_CLEANUP',90);
+
+$GLOBALS['CURL_SETTINGS'] = array(
+    CURLOPT_USERAGENT => 'Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/28.0.1468.0 Safari/537.36',
+    CURLOPT_CONNECTTIMEOUT => 30,
+    CURLOPT_RETURNTRANSFER => 1,
+    CURLOPT_FOLLOWLOCATION => true,
+);
 
 $GLOBALS['BOT_CONFIG'] = array();
 $GLOBALS['BOT_CONFIG'][0] = array('class'=>null,'name'=>'Unknown');
@@ -25,6 +38,13 @@ $GLOBALS['BOT_CONFIG'][1] = array(
     'consumerSecret'=>'',
     'oauthKey' => '',
     'oauthSecret' => ''
+);
+
+/* Bot that does not run as a cron */
+$GLOBALS['BOT_CONFIG'][2] = array(
+    'class' => 'Raw_Bot',
+    'name' => 'Projects',
+    'interval' => -1
 );
 
 /** SYSTEM WRITTEN CONFIG **/
