--- a/config.php.example
+++ b/config.php.example
@@ -7,7 +7,7 @@
 
 define('DS',DIRECTORY_SEPARATOR);
 define('SAYWUT_ROOT_PATH',__DIR__);
-define('SAYWUT_SERVER_ROOT',$_SERVER["DOCUMENT_ROOT"]);
+define('SAYWUT_SERVER_ROOT',SAYWUT_ROOT_PATH.DS.'..');
 
 
 define('MYSQL_DB_HOST', 'localhost');
